[project]
name = "uv-migrator-core"
version = "0.0.1"
description = "ADHD Framework core: uv_migrator_core"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "yaml-reading-core",
    "modules-controller-core",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/uv_migrator_core.git"

[tool.adhd]
type = "core"
layer = "dev"

[tool.uv.sources]
logger-util = { git = "https://github.com/AI-Driven-Highspeed-Development/Logger-Util.git" }
yaml-reading-core = { git = "https://github.com/AI-Driven-Highspeed-Development/yaml_reading_core.git" }
modules-controller-core = { git = "https://github.com/AI-Driven-Highspeed-Development/modules_controller_core.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
